--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+*.egg-info
+*.pot
+*.py[co]
+.tox/
+__pycache__
+MANIFEST
+dist/
+docs/_build/
+docs/locale/
+node_modules/
+tests/coverage_html/
+tests/.coverage
+build/
+tests/report/
+venv/
+db.sqlite3
 env/
+.vscode/
+.aws/
+zappa_settings.json
+APIKey.json
+migration_script.py
