--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.22.4",
+    "axios": "^1.7.9",
     "react": "18",
     "react-dom": "18",
     "react-router": "^7.0.2",
