--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.22.4",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
+    "path-to-regexp": "^8.2.0",
     "react": "18",
     "react-dom": "18",
     "react-router": "^7.0.2",
