--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,4 +7,5 @@ pycryptodome==3.21.0
 PyJWT==2.10.1
 sqlparse==0.5.3
 tzdata==2024.2
-psycopg2-binary==2.9.6
+psycopg2-binary==2.9.3
+python-dotenv==1.0.1
